--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "typed.js": "^2.0.11",
     "typescript": "^3.7.5"
   },
   "scripts": {
