--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^12.12.25",
     "@types/react": "^16.9.18",
     "@types/react-dom": "^16.9.5",
+    "@types/smooth-scroll": "^16.1.0",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "smooth-scroll": "^16.1.2",
     "typed.js": "^2.0.11",
     "typescript": "^3.7.5"
   },
