--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^12.12.25",
     "@types/react": "^16.9.18",
     "@types/react-dom": "^16.9.5",
+    "@types/semantic-ui": "^2.2.7",
     "@types/smooth-scroll": "^16.1.0",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "semantic-ui-react": "^0.88.2",
     "smooth-scroll": "^16.1.2",
     "typed.js": "^2.0.11",
     "typescript": "^3.7.5"
