--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/semantic-ui": "^2.2.7",
     "@types/smooth-scroll": "^16.1.0",
+    "axios": "^0.19.2",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
