--- a/app.yaml
+++ b/app.yaml
@@ -7,8 +7,10 @@ handlers:
  - url: /
    static_files: build/index.html
    upload: build/index.html
+   secure: always
 
  - url: /(.*)
    static_files: build/\1
    upload: build/(.*)
+   secure: always
 # [END handlers]
